3_TypeChecking/test/bad/bad02.cc
void main() {
	int i = true;
}